src/rekkord/web/assets/client.css
/* ... */
@media screen and (max-width: 960px) {
    .columns {
        flex-direction: column;

        & > * + * {
            padding-left: 0;
            border-left: none;

            padding-top: 1em;
            border-top: 1px dashed #ccc;
        }
    }
}

.popup {
    position: fixed;
    max-width: 90vw;
    padding: 1em;
    background: white;
    border-radius: 8px;
    box-shadow: 2px 2px rgba(136, 136, 136, 0.12);
    z-index: 999999;
}

.actions {
    display: block;
    margin-top: 1.5em;
    text-align: center;

    & > button { display: inline-block; }
    & > a {
        display: block;
        width: auto;
        margin: 0;
        padding: 0;
        background: none !important;
        color: var(--anchor_color) !important;
        font-size: 0.9em;
        text-decoration: underline;
    }

    & > button + button { margin-left: 0.5em; }
    & > button + a { margin-top: 0.5em; }
}
.actions.vertical {
    display: flex;
    flex-direction: column;
    align-items: stretch;

    & > button + button { margin-left: 0; }
}

button {
    font-size: 0.92em;
    font-weight: normal !important;
    color: var(--color) !important;
    --color: white;
}
button.secondary {
    --button_color: #ddd;
    --color: black;
}
button.danger {
    --button_color: #d33410;
    --color: white;
}
button.small {
    --button_color: #ddd;
    --color: black;
    font-size: 0.7em;
}
button.small > img {
    top: 2px;
    width: 12px;
    height: 12px;
}
button.active { filter: invert(100%); }
button.insist {
    filter: invert(100%);
    transform: scale(1.1);
    transition: filter 0.2s ease, transform 0.1s ease;
}
button:disabled {
    filter: saturate(0%) contrast(50%);
    cursor: not-allowed;
}

button.highlight { animation: highlight 1.4s ease-in-out infinite alternate; }
@keyframes highlight {
    0% {
        filter: contrast(100%);
        transform: scale(1);
    }
    100% {
        filter: contrast(120%);
        transform: scale(1.2);
    }
}

table .arrows {
    margin-left: 4px;
    display: inline-flex;
    flex-direction: column;
    gap: 1px;
    vertical-align: middle;
}
table .arrows .up {
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-bottom: 5px solid lightgray;
}
table .arrows .down {
    display: inline-block;
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid lightgray;
}
table .arrows .up.active { border-bottom: 5px solid #525461; }
table .arrows .down.active { border-top: 5px solid #525461; }
table .grab {
    cursor: grab;
    padding-top: 5px;
    padding-bottom: 0;
    user-select: none;
    -webkit-user-select: none;
}
table tbody tr:hover > td {
    background: var(--bar_color);
    color: white;
    --color: white;
}

#log {
    position: fixed;
    left: 50%;
    top: 1em;
    width: calc(100vw - 2em);
    max-width: 600px;
    z-index: 99999;
    user-select: none;
    -webkit-user-select: none;
    font-size: 15px;
    transform: translateX(-50%);
}

#log > div {
    margin-bottom: 8px;
    padding: 8px;
    background: #373737;
    color: white;
    border-radius: 20px;
    text-align: center;
    cursor: pointer;
}
@media (hover: hover) {
    #log > div:hover { filter: opacity(40%); }
}
#log > div.error { background: #ff6600; }
#log > div.success { background: #2d8261; }

/* Came from https://loading.io/css/ */
.log_spin {
    float: left;
    display: inline-block;
    box-sizing: border-box;
    width: 20px;
    height: 20px;
    margin: -1px 0 0 -1px;
}
.log_spin::after {
    content: ' ';
    display: block;
    width: 12px;
    height: 12px;
    margin: 1px;
    border-radius: 50%;
    border: 4px solid white;
    border-color: white transparent white transparent;
    animation: log_spin 0.8s ease-in-out infinite;
}
@keyframes log_spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.row {
    display: flex;
    gap: 1em;
    align-items: start;
}
.column {
    display: flex;
    flex-direction: column;
    gap: 1em;
}
.box {
    display: flex;
    flex-direction: column;
    padding: 1em;
    gap: 1em;
    background: var(--box_color);
    border-radius: 8px;
}

@media screen and (max-width: 960px) {
    .row {
        flex-direction: column;
        align-items: stretch;
    }
}

.header {
    margin-bottom: 1em;
    font-size: 1.2em;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    color: #262626;
}
.block {
    display: flex;
    flex-direction: column;
    padding: 1em;
    background: var(--tab_color);
    border-radius: 6px;
    gap: 0.71em;
}

.tabbar {
    display: flex;
    gap: 0.6em;

    & > a {
        position: relative;
        padding: 0.4em 1em 0.5em 1em;
        background: color-mix(in srgb, var(--bar_color), white 50%);
        cursor: pointer;
        text-decoration: none;
        color: black;
        text-align: center;
        border-top-left-radius: 8px;
        border-top-right-radius: 8px;

        & > img {
            width: 24px;
            height: 24px;
            transform: translateY(3px);
            filter: invert(100%);
        }

        &:is(.active, :hover) {
            background: var(--bar_color);
            color: white;

            & > img { filter: none; }
        }
        &.active { font-weight: bold; }
    }
}
.tabbar + .block {

    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

@media screen and (max-width: 960px) {
    .tabbar > a {
        padding: 0.2em 0.7em 0.3em 0.7;
        font-size: 0.9em;
    }
    .block { padding: 1em 0.5em; }
}

.info {
    display: flex;
    flex-direction: column;
    gap: 1em;

    & > div { text-align: center; }
}

.sub {
    font-size: 0.8em;
    font-weight: normal;
    text-transform: none;
    font-variant: normal;
    color: var(--color, #888);
}
/* ... */

